# protcast

./: .gitignore  03-20-2025-11-11-58_GOEncoder.pickle  LICENSE  README.md  __init__.py  config.example.json  globals.py  profile_speedscope  pyproject.toml  pytest.ini  test_ctriad.tsv
.claude/: settings.local.json
.github/workflows/: run_tests.yml
benchmark_pipeline/: Makefile  PIPELINE_README.md  benchmark_analysis.py  environment.yml  extended_metrics.py  preprocess.py
benchmark_pipepline/: QUICK_REFERENCE.md  config.yaml  consolidate_results.py  requirements.txt  run_pipeline.py  setup.sh
doc/: CUDA-BioWulf.txt  README.md  dataset_generation.txt
preprocessing/: annotate_proteins.py  annotated_godag.py  annotated_goterm.py  build_ontology.py  create_annotation_files.py  create_query_sequences_files.py  create_simple_dataset.py  filter_fasta_from_goa.py  make_dr_seqs.py  ontology_to_files.py  parse_gaf.py  parse_swissprot.py  protein.py  simple_dataset.py  swissprot2csv.py  utils.py  write_deepred_dataset_to_file.py
preprocessing-scripts/: create_simple_dataset.py
preprocessing/stats/: create_dataset_stats.py  create_deepred_dataset_stats.py  (+2 more)
protcast/: __init__.py  globals.py
scripts/: analyze_esm3c_embeddings.py  analyze_subgraphs_by_depth.py  binary_classify.py  compare_combined_vs_embeddings.py  compare_knn_esm_vs_knn_combined.py  compare_knn_vs_multilabel.py  create_dataset_stats.py  create_protcast_dataset.py  create_query_sequences_files.py  create_simple_dataset.py  create_subgraph_sequences_files.py  diagnose_protcast_sequences.py  esm3_embedding_example.py  get_available_gpus.py  go_level_analysis.py  make_dr_seqs.py  make_dr_seqs_mmseqs.py  make_esm_embeddings.py  make_knn_model_embeds.py  make_multi_class_model.py  make_multi_class_model_embeds.py  make_multilabel_model_embeds.py  manim_dataflow.py  mnist_convnet.py  protcast_dataset2obo.py  repeat_slurm_job.py  run_binary_classification.py  run_knn_inference_embeds.py  run_multi_class_inference-nof1.py  run_multi_class_inference.py  run_multi_class_inference_embeds.py  run_multilabel_inference_embeds.py  run_multiple_classification.py  scan_feature_vectors_only.py  scan_individual_features.py  simpledataset2obo.py  split_mf_go_terms_by_level.py  swissprot2csv.py  test_cuda.py
test/: README.md  __init__.py  profile_speedscope  test_annot_propagation.py  test_annotation.py  test_binary_classifier.py  test_blast_to_go.py  test_box_embeddings.py  test_build_ontology.py  test_create_protcast_dataset.py  test_create_simple_dataset.py  test_cuda.py  test_feature_vector.py  test_featurespace_demo.py  test_featurespace_gpcrs.py  test_gaf_parser.py  test_goatools.py  test_knn_classifier.py  test_knn_small_scale.py  test_multi_classifier.py  test_multi_classifier_embeds.py  test_multi_classifier_inference.py  test_multi_classifier_unit.py  test_multilabel_classifier.py  test_multilabel_small_scale.py  test_ontology.py  test_ontology_topology.py  test_path_to_root.py  test_semantic_distance.py  test_simplemodel.py  test_swissprot_parser.py
training-scripts/: train_submodel.py
utility-scripts/: create_dataset_stats.py  create_simple_dataset.sh  get_simple_dataset_files-slurm.sh  get_simple_dataset_files.sh  make_dr_seqs.py  repeat_slurm_job.py  simpledataset2obo.py  swissprot2csv.py
(+75 files in other folders)
