[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ProtCast"
version = "0.0.1"
description = "Protein function prediction based on sequence"
authors = [{ name = "Wisdom Akpan", email = "wisdom@bioteam.net" },{ name = "Brian Osborne", email = "briano@bioteam.net" }, {name = "Bruno Alvisio", email = "contact@bioteam.net"}]
requires-python = ">=3.9.2"
dependencies = [
    "plotly",
    "kaleido",
    "numpy<2",
    "numba",
    "typeguard",
    "scikit-learn",
    "tqdm",
    "biopython",
    "ifeatpro",
    "goatools",
    "pandas",
    "grpcio",
    "tensorflow>=2.16.1",
    "keras>=3.0",
    "tensorboard",
    "py-spy",
    "virtualenv",
    "urllib3==1.26.5"
]

[tool.setuptools]
packages = ["protcast"]
