[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ProtCast"
version = "0.0.1"
description = "Protein function prediction based on sequence"
authors = [
    { name = "Wisdom Akpan", email = "wisdom@bioteam.net" },
    { name = "Brian Osborne", email = "briano@bioteam.net" },
    { name = "Jordan Ramsdell", email = "jramsdell@bioteam.net" },
    { name = "Bruno Alvisio", email = "contact@bioteam.net" },
]
requires-python = ">=3.9, <3.12"
dependencies = [
    "plotly",
    "kaleido",
    "urllib3==1.26.5",
    "numpy<2.0,>=1.25.2",
    "tensorflow>=2.8.0",
    "keras>=2.8.0",
    "h5py==3.9.0",
    "numba",
    "typeguard",
    "scikit-learn",
    "tqdm",
    "biopython",
    "goatools",
    "pandas",
    "grpcio",
    "tensorboard",
    "py-spy",
    "virtualenv",
    "protein-feature-vectors",
    "mlflow",
    "rdkit",
    "dagshub",
]

[tool.setuptools]
packages = ["protcast"]
